# farl

./: demo.py  example.py  pyproject.toml
.github/workflows/: ci.yml  claude.yml
src/farl/: __init__.py  decorators.py  handlers.py  manager.py  types.py
src/farl/dependencies/: __init__.py  limits.py
src/navio/: base.py  constants.py  exceptions.py  middleware.py  openapi.py  types.py  utils.py
src/navio/dependencies/: ratelimit.py
tests/: test_base.py  test_decorators.py  test_dependencies.py  test_exceptions.py  test_middlware.py
