[project]
name = "navio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nafnix", email = "uwu@nafnix.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "limits>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "ruff>=0.12.5",
]
redis = [
    "redis>=6.2.0",
]
